nuxeo-platform-webapp-core/src/main/resources/themes/css/buttons_and_actions.css
/*
Styles for the buttons and actions.
=Buttons -> default buttons. Major is used in forms, when you want to highlight one action
=Action Bar -> usually used under tabs, to display many different actions (from document creation to view mode)
=Foldablebox Action -> actions in foldable header
=RightClick menu -> actions menu displayed by rightclick on links
=Icon size -> control the size of icons to keep consistency
author: lkemen@nuxeo.com
*/

/* Fix button heights in Ffox */
input::-moz-focus-inner {
  border: 0;
  padding: 0 }

/* =Buttons */
.button,
a.button,
input.button,
.action_bar a {
  box-shadow: 0 -2px 5px #fff inset;
  background-color: "button (__FLAVOR__ background)";
  border-radius: 3px;
  border: 1px solid;
  border-color: "button (__FLAVOR__ border)";
  color: "link.action (__FLAVOR__ color)";
  cursor: pointer;
  display: inline-block;
  font-size: .95em;
  font-weight: bold;
  margin: 0 .9em .9em 0;
  padding: .3em .7em .4em;
  text-decoration: none;
  white-space: nowrap }

a.button {
  padding: .3em .5em }

.button:hover,
a.button:hover,
input.button:hover,
.action_bar a:hover {
  border: 1px solid;
  border-color: "button.hover (__FLAVOR__ border)";
  box-shadow: 0 -2px 0 #ddd inset; }

.button:focus {
  border-color: #2e9cff;
  box-shadow: 0 0 3px #b5dcff, 0 -2px 0 #ddd inset;
  outline: none }

button.disabled,
input.disabled,
button.disabled:hover,
input.disabled:hover,
.button[disabled],
.button[disabled]:hover,
.button[disabled=disabled],
.button[disabled=disabled]:hover {
  background: none "button.disabled (__FLAVOR__ background)";
  border: 1px solid;
  box-shadow: none;
  border-color: "button.disabled (__FLAVOR__ border)";
  color: "link.disabled (__FLAVOR__ color)";
  cursor: default }

.tinyButton,
.smallButton,
a.tinyButton,
a.smallButton,
input.tinyButton,
input.smallButton {
  background-color: #fff;
  color: "link (__FLAVOR__ color)";
  font-size: .92em;
  padding: .25em .5em;
  text-decoration: none }

.tinyButton,
a.tinyButton,
input.tinyButton {
  font-size: .85em;
  padding: 0 .3em }

.dropdown,
.dropdown:hover {
  background: url("${basePath}/icons/dropdown.png") no-repeat scroll right center;
  background-color: "button (__FLAVOR__ background)";
  padding: .25em 1.5em .2em .8em !important }

.dropdown:hover {
  background-color: "neutral.light (__FLAVOR__ background)" }

/* =Action Bar */
.action_bar {
  float: left;
  line-height: normal;
  margin: .5em .5em .8em 0 }

.action_bar_message {
  float: right;
  font-size: .8em;
  margin: 0 }

.action_bar_message form {
  display: inline;
  text-align: right }

.action_bar ul {
  list-style: none;
  margin: 0;
  padding: 0 1em 0 0 }

.action_bar li {
  float: left;
  margin: 0;
  padding: 0 }

.action_bar a {
  float: left;
  font-size: .9em;
  font-weight: bold;
  margin: 0 .6em .7em 0;
  padding: .3em .7em .4em;
  text-decoration:none }

.action_bar a img {
  float: left;
  margin: -0.2em .3em -0.3em -0.4em }

.action_bar input[type="text"] {
  margin: 0 .2em }

.action_bar input.button {
  margin-top: 0 }

.contentViewQuickFilterForm .action_bar a {
  margin: 0 }

.contentViewUpperActions {
  color: "gray.light (__FLAVOR__ color)";
  float: right;
  font-size: .9em;
  margin: 1em 0;
  text-align: right }

.contentViewUpperAction {
  display: inline-block;
  padding: 0 0 0 .1em;
  vertical-align: top }

.contentViewUpperAction a {
  color: "gray.light (__FLAVOR__ color)";
  font-size: .85em }

.contentViewUpperAction .contentViewPageSelectorDesc {
  display: inline;
  vertical-align: top }

.contentViewUpperAction .langSelect {
  font-size: .8em;
  margin: 0;
  padding: 0 }

.contentViewUpperAction .contentViewPageSelector {
  float: left;
  font-size: .8em;
  padding: .1em }

/* =Actionbar in Home */
.actionList {
  float: right;
  list-style: none;
  margin: 0;
  padding: 0 }

.actionList li {
  cursor: pointer;
  display: block;
  font-weight: normal;
  margin: 0 0 0 .4em;
  position: relative;
  text-decoration: none;
  z-index:3000 }

.actionList li a {
  color: "default (__FLAVOR__ color)";
  padding: 0 }

.actionList .actionSubList {
  background-color: #fff;
  border: 1px solid;
  border-color: "neutral.light (__FLAVOR__ border)";
  border-radius: 3px;
  box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
  display:none;
  list-style: none;
  margin-top: .5em;
  padding: 0;
  position: absolute;
  right: 0;
  top: 19px;
  width: 250px;
  z-index: 1001 }

.actionList .actionSubList li {
  background: none;
  border: none;
  float: none;
  height: auto;
  margin: 0;
  padding: 0;
  text-align: left;
  max-width: 300px }

.actionList .actionSubList li a {
  background: none;
  border: none;
  border-radius: 0;
  box-shadow: none;
  display: block;
  margin: 0;
  padding: .5em 1em;
  text-decoration: none;
  white-space: normal }

.actionList .actionSubList li a:hover {
  background-color:"neutral.light (__FLAVOR__ background)" }

.actionSubList .smallIcon {
  margin: 0 .8em -0.2em 0 }

/* =Kept for social collab custom actions */
.headerTitleAndTools h1 {
  display: inline }

.headerTitleAndTools h1 span {
  color: "gray.light (__FLAVOR__ color)";
  font-weight: normal }

.headerTitleAndTools .globalActionBar {
  float: right } /* Clean headerTitleAndTools style, inheritance issue with globalActionBar class*/

.globalActionBar h1 {
  float: left }

.globalActionBar .actionList {
  float: right;
  list-style: none;
  margin: 0;
  padding: 0 }

.globalActionBar .actionList li {
  cursor: pointer;
  display: block;
  font-weight: normal;
  margin: 0 0 0 .4em;
  position: relative;
  text-decoration: none;
  z-index:3000 }

.globalActionBar .actionList li a {
  color: "default (__FLAVOR__ color)";
  padding: 0 }

.globalActionBar .actionList .actionSubList {
  background-color: #fff;
  border: 1px solid;
  border-color: "neutral.light (__FLAVOR__ border)";
  border-radius: 3px;
  box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
  display:none;
  list-style: none;
  margin-top: .5em;
  padding: 0;
  position: absolute;
  right: 0;
  top: 19px;
  width: 250px;
  z-index: 1001 }

.globalActionBar .actionList .actionSubList li {
  background: none;
  border: none;
  float: none;
  height: auto;
  margin: 0;
  padding: 0;
  text-align: left;
  max-width: 300px }

.globalActionBar .actionList .actionSubList li a {
  background: none;
  border: none;
  display: block;
  margin: 0;
  padding: .5em 1em;
  text-decoration: none;
  white-space: normal }

.globalActionBar .actionList .actionSubList li a:hover {
  background-color:"neutral.light (__FLAVOR__ background)";
  border: none;
  border-radius: none;
  box-shadow: none }

.globalActionBar .actionSubList .smallIcon {
  margin: 0 .8em -0.2em 0 }

.separator {
  border-bottom: 1px solid #ddd }

/* =MainActions in Document Title Area */
.titleBlock {
  float: left;
  max-width: 60% }

.globalActions {
  text-align: right }

.contextActions {
  padding: .4em 0 .5em }

.contextActions div img {
  padding: -0.3em 0 0 }

.contextActions .widgetPanel {
  margin: 0 }

/* Link on forms */
.actionLink {
  margin: .1em .2em .1em .1em }

/* =Foldablebox Action for Local Configuration*/
.foldableBox h3 a.action,
.foldableBox h3 a.action:visited {
  color: "black (__FLAVOR__ color)";
  float: right !important;
  font-size: .8em;
  margin: 0 .5em;
  padding: 0 .7em }

.foldableBox h3 a.action:hover,
.foldableBox h3 a.action:visited:hover {
  float: right !important; }

/* =RightClick menu */
#contextMenu {
  position: absolute;
  visibility: hidden;
  top: 0;
  left: 0 }

.ctxMenuStyle {
  border: 1px solid;
  border-color: "neutral.light (__FLAVOR__ border)";
  min-width: 120px;
  font-size: .7em }

.ctxMenuItemStyle,
.ctxMenuItemHoverStyle {
  margin: 0;
  display: block;
  cursor: default;
  padding: .4em .5em;
  background-color:#fff;
  font-weight: bold }

.ctxMenuItemHoverStyle {
  cursor: pointer;
  background-color: "neutral.light (__FLAVOR__ background)" }

.ctxMenuItemStyle a,
.ctxMenuItemHoverStyle a {
  display: block;
  text-decoration: none }

.ctxMenuImg {
  vertical-align: middle;
  padding: 0 .4em .2em 0 }

/* =Labels, tags, users */
.tag {
  background: none "neutral.medium (__FLAVOR__ background)";
  border-radius: 3px;
  border: 1px solid;
  border-color: transparent #ddd #ccc transparent;
  color: #555f6d;
  display: inline-block;
  font-family: Arial, Tahoma, sans-serif;
  font-size: 13px;
  line-height: inherit;
  margin: .1em;
  padding: 0 .12em;
  text-decoration: none;
  -moz-transition: none;
  -webkit-transition: none;
  transition: none }

.tag,
a.tag,
.tag a,
.tagLink a {
  color: #555f6d;
  text-decoration: none }

.tagLink img {
  display: inline;
  margin: 0 0 -0.1em;
  opacity: .7;
  width: 12px }

a.tag:hover,
.tag a:hover,
.tag img:hover {
  color: "link (__FLAVOR__ color)";
  opacity: 1 }

.tag.newTag {
  background: url("${basePath}/icons/add.png") no-repeat scroll 0 0 #e0f8d9;
  color: "black (__FLAVOR__ color)";
  padding: 0 .3em 0 1.3em }

.user,
.group,
span.user,
span.group {
  background: url("${basePath}/icons/user.png") no-repeat scroll 2px 2px transparent;
  border: 1px solid;
  border-color: "neutral.light (__FLAVOR__ border)";
  border-radius: 3px;
  color: "gray.dark (__FLAVOR__ color)";
  display: inline-block;
  opacity: 1;
  padding: .1em .3em .1em 1.8em;
  white-space: nowrap }

.group,
span.group {
  background: url("${basePath}/icons/group.png") no-repeat scroll 2px 2px transparent }

.user a:hover,
.group a:hover {
  color: "link (__FLAVOR__ color)";
  text-decoration: none }

a .user:hover,
a .group:hover {
  background-color: "color.major.light (__FLAVOR__ background)";
  border-color: "color.major.stronger (__FLAVOR__ border)" }

.description_block span.user {
  display: inline-block;
  font-size: 1em;
  padding: .1em .3em .1em 2.1em }

.sticker {
  background-color: #fff;
  border: 1px solid;
  border-color: "neutral.light (__FLAVOR__ border)";
  border-radius: 3px;
  box-shadow: 0 1px 0 rgba(0, 0, 0, 0.05);
  color: "black (__FLAVOR__ color)";
  display: inline-block;
  font-size: .95em;
  font-weight: bold;
  margin: .2em .5em .2em .1em;
  padding: .1em .3em }

/* =Icon size management for upload in Nuxeo Studio */
.bigIcon {
  width: 50px }

.smallIcon {
  height: 16px;
  width: 16px }

